# hospo-matcher-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
database/: docker-compose.yml  synthetic_data.json  synthetic_data.py
database/scripts/: load_synthetic_data.py
hospo_matcher/: app.py
hospo_matcher/controllers/: crud.py
hospo_matcher/routers/: sessions.py  venues.py
hospo_matcher/utils/: data_models.py  database.py  dependencies.py  helper_functions.py
tests/: conftest.py  data.py  test_sessions.py  test_venues.py
web_scraping/: extract_content.py
