[tool.poetry]
name = "hospo_matcher"
version = "0.1.0"
description = ""
authors = ["Callum Macaskill"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pre-commit = "^3.7.1"
pymongo = "^4.7.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
