[tool.poetry]
name = "hospo_matcher"
version = "0.1.0"
description = ""
authors = ["Callum Macaskill"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pre-commit = "^3.7.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pytest = "^8.2.1"
httpx = "^0.27.0"
argparse = "^1.4.0"
motor = "^3.4.0"
pytest-asyncio = "^0.23.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
